<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Google Image Search</string>
    <string name="action_settings">Settings</string>
    <string name="search_Button">Search</string>
    <string name="search_for_images">Search for images</string>
    <string name="settings">Settings</string>
    <string name="title_activity_image_display">ImageDisplayActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="advanced_search_options">Advanced search options</string>
    <string name="www_example_com">www.example.com</string>
    <string name="image_size">Image Size</string>
    <string name="color_filter">Color Filter</string>
    <string name="image_type">Image Type</string>
    <string name="site_filter">Site Filter</string>
    <string name="save">Save</string>

    <string-array name="image_sizes_array">
        <item>icon</item>
        <item>small</item>
        <item>medium</item>
        <item>large</item>
        <item>xlarge</item>
        <item>xxlarge</item>
        <item>huge</item>
    </string-array>
    <string name="small">small</string>

    <string-array name="color_filter_array">
        <item>black</item>
        <item>blue</item>
        <item>brown</item>
        <item>gray</item>
        <item>green</item>
        <item>orange</item>
        <item>pink</item>
        <item>purple</item>
        <item>red</item>
        <item>teal</item>
        <item>white</item>
        <item>yellow</item>
    </string-array>
    <string name="black">black</string>

    <string-array name="image_type_array">
        <item>face</item>
        <item>photo</item>
        <item>clipart</item>
        <item>lineart</item>
    </string-array>
    <string name="face">face</string>
    <string name="empty"></string>
    <string name="load_more">Load more</string>

</resources>